--- a/map2.html
+++ b/map2.html
@@ -120,7 +120,7 @@
         // --- 設定 ---
         const ZOOM_LEVEL = 16;
         const GEOJSON_PATH = 'assets/JapanMap.geojson';
-        const WS_URL = 'ws://localhost:8888';
+        const WS_URL = 'ws://192.168.0.158:8888'; //localhost
         const RECONNECT_INTERVAL = 10000; // 10秒
         
         // --- 変数初期化 ---
